log
Sun 19 May 2024 12:49:19 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
fed2a39
Sun 19 May 2024 12:51:32 AM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:11: error: redefinition of ‘list’
   75 |     List* list=createList();
      |           ^~~~
sudoku.c:54:10: note: previous definition of ‘list’ with type ‘List *’
   54 |    List* list = createList();
      |          ^~~~
Compilation failed
91494d2
Sun 19 May 2024 12:51:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b34b0a2
Sun 19 May 2024 12:52:04 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
a59db8b
Sun 19 May 2024 12:55:07 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:17: error: unused variable ‘l’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |                 ^
sudoku.c:49:14: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |              ^
sudoku.c:49:11: error: unused variable ‘j’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |           ^
sudoku.c:49:8: error: unused variable ‘i’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
c2d799c
Sun 19 May 2024 12:56:50 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:17: error: unused variable ‘l’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |                 ^
sudoku.c:49:14: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i, j, k, l;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
8784edf
Sun 19 May 2024 12:57:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
f5d8054
Sun 19 May 2024 12:59:04 AM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|3
total_score: 35/70
6d10b0d
Sun 19 May 2024 01:01:24 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:78:13: error: expected identifier or ‘(’ before ‘=’ token
   78 |    for (int = 0; i < 9; i += 3){
      |             ^
sudoku.c:85:16: error: expected ‘,’ or ‘;’ before ‘if’
   85 |                if (num != 0){
      |                ^~
sudoku.c:84:20: error: unused variable ‘num’ [-Werror=unused-variable]
   84 |                int num = n->sudo[i + k][j + l]
      |                    ^~~
sudoku.c:81:14: error: unused variable ‘block’ [-Werror=unused-variable]
   81 |          int block[10] = {0};
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
dc8ce76
Sun 19 May 2024 01:01:43 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:85:16: error: expected ‘,’ or ‘;’ before ‘if’
   85 |                if (num != 0){
      |                ^~
sudoku.c:84:20: error: unused variable ‘num’ [-Werror=unused-variable]
   84 |                int num = n->sudo[i + k][j + l]
      |                    ^~~
sudoku.c:81:14: error: unused variable ‘block’ [-Werror=unused-variable]
   81 |          int block[10] = {0};
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
358be0c
Sun 19 May 2024 01:01:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
11fa900
Sun 19 May 2024 01:02:31 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
0244518
Sun 19 May 2024 01:03:54 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
f7f0e25
Sun 19 May 2024 01:04:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b1924c4
Sun 19 May 2024 01:05:42 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
330fba7
Sun 19 May 2024 01:06:06 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
492abca
Sun 19 May 2024 01:07:31 AM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  6|2
total_score: 45/70
22392da
Sun 19 May 2024 01:07:39 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
39b15ec
Sun 19 May 2024 01:42:40 AM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:177:30: error: invalid use of void expression
  177 |             Node* adj_node = (Node*)popFront(adj_nodes);
      |                              ^
Compilation failed
1f35b23
Sun 19 May 2024 01:44:51 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:178:30: error: invalid use of void expression
  178 |             Node* adj_node = (Node*)popFront(adj_nodes);
      |                              ^
Compilation failed
9e819e6
Sun 19 May 2024 01:46:58 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:177:30: error: invalid use of void expression
  177 |             Node* adj_node = (Node*)popFront(adj_nodes);
      |                              ^
Compilation failed
0a67243
Sun 19 May 2024 01:52:23 AM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:176:16: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  176 |            pop(adj_node);
      |                ^~~~~~~~
      |                |
      |                Node *
In file included from test.c:4:
list.h:31:17: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘Node *’
   31 | void pop(Stack* s);
      |          ~~~~~~~^
In file included from test.c:5:
sudoku.c: At top level:
sudoku.c:189:1: error: expected identifier or ‘(’ before ‘}’ token
  189 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
efed3cc
Sun 19 May 2024 01:53:30 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:189:1: error: expected identifier or ‘(’ before ‘}’ token
  189 | }
      | ^
Compilation failed
8560290
Sun 19 May 2024 01:53:38 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d0f57bd
Sun 19 May 2024 01:55:09 AM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  10|0
total_score: 70/70
2fe4209
